fix overflow not appearing in account details

--- a/src/pages/AccountDetailsPage/styles.scss
+++ b/src/pages/AccountDetailsPage/styles.scss
@@ -36,6 +36,7 @@
   min-height: 65.6vh;
   width: 100%;
   background-color: #FFFFFF;
+  overflow: auto;
 }
 
 .account-details_list_button-container {
